--- a/RNN-example.ipynb
+++ b/RNN-example.ipynb
@@ -6,9 +6,8 @@
    "source": [
     "# How to use the RNN Disaggregator with NILMTK\n",
     "\n",
-    "This is an example on how to train and use the Recurrent Network (RNN) disaggregator on the [REDD](http://redd.csail.mit.edu/) dataset using [NILMTK](https://github.com/nilmtk/NILMTK/).\n",
+    "This is an example on how to train and use the stacked Recurrent Network (RNN) disaggregator on the [REDD](http://redd.csail.mit.edu/) dataset using [NILMTK](https://github.com/nilmtk/NILMTK/).\n",
     "\n",
-    "This network was described in the [Neural NILM](https://arxiv.org/pdf/1507.06594.pdf) paper."
    ]
   },
   {
